--- a/HelperMaster.NET/HelperMaster.NET.csproj
+++ b/HelperMaster.NET/HelperMaster.NET.csproj
@@ -42,13 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAnnotations\HelperDataAnnotations.cs" />
     <Compile Include="DTO\DatoComboBox.cs" />
     <Compile Include="DTO\Respuesta.cs" />
     <Compile Include="DTO\SubRespuesta.cs" />
     <Compile Include="Enum\TipoRespuesta.cs" />
     <Compile Include="General\Conversion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WindowsForms\Helper.cs" />
+    <Compile Include="WindowsForms\HelperWindowsForms.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
