--- a/HelperMaster.NET/HelperMaster.NET.csproj
+++ b/HelperMaster.NET/HelperMaster.NET.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HelperMaster.NET</RootNamespace>
     <AssemblyName>HelperMaster.NET</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="iTextSharp, Version=4.1.6.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca">
+      <HintPath>..\packages\iTextSharp-LGPL.4.1.6\lib\iTextSharp.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.ReportViewer.Common, Version=14.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.WebForms.140.1000.523\lib\net40\Microsoft.ReportViewer.Common.dll</HintPath>
     </Reference>
@@ -106,6 +109,7 @@
     <Compile Include="General\DataTableX.cs" />
     <Compile Include="General\PaginacionEnVolumenes.cs" />
     <Compile Include="General\PaginacionTupla.cs" />
+    <Compile Include="General\PDF.cs" />
     <Compile Include="MVC\HelperMVC.cs" />
     <Compile Include="MVC\HtmlHelperMVC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
