Se actualiza clase PDF que utiliza iTextSharp, referente al cambio de versión 4 a la versión 5. También se agregaron archivos de clases extras que complementan a éste.

--- a/HelperMaster.NET/HelperMaster.NET.csproj
+++ b/HelperMaster.NET/HelperMaster.NET.csproj
@@ -32,8 +32,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="iTextSharp, Version=4.1.6.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca">
-      <HintPath>..\packages\iTextSharp-LGPL.4.1.6\lib\iTextSharp.dll</HintPath>
+    <Reference Include="itextsharp, Version=5.5.13.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\packages\iTextSharp.5.5.13\lib\itextsharp.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp.xmlworker, Version=5.5.13.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\packages\itextsharp.xmlworker.5.5.13\lib\itextsharp.xmlworker.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.ReportViewer.Common, Version=14.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.WebForms.140.1000.523\lib\net40\Microsoft.ReportViewer.Common.dll</HintPath>
@@ -106,7 +109,9 @@
     <Compile Include="Enum\EstadoCheckBox.cs" />
     <Compile Include="Enum\TipoRespuesta.cs" />
     <Compile Include="General\Conversion.cs" />
+    <Compile Include="General\CustomImageTagProcessor.cs" />
     <Compile Include="General\DataTableX.cs" />
+    <Compile Include="General\Helper.cs" />
     <Compile Include="General\PaginacionEnVolumenes.cs" />
     <Compile Include="General\PaginacionTupla.cs" />
     <Compile Include="General\PDF.cs" />
