Fix al Método helper ConsultarArchivoDesdeEnsamblado. No tomaba el ensamblado que contiene los recursos incrustados, para lo cual, se mejora para que sea ingresado como segundo parámetro el nombre del ensamblado en cuestión.

--- a/EjemploMVC/EjemploMVC.csproj
+++ b/EjemploMVC/EjemploMVC.csproj
@@ -48,8 +48,11 @@
     <Reference Include="Antlr3.Runtime, Version=3.4.1.9004, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
-    <Reference Include="HelperMaster.NET, Version=1.0.0.4, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\HelperMaster.NET.1.0.6\lib\net45\HelperMaster.NET.dll</HintPath>
+    <Reference Include="EjemploNegocio">
+      <HintPath>..\EjemploNegocio\bin\Debug\EjemploNegocio.dll</HintPath>
+    </Reference>
+    <Reference Include="HelperMaster.NET, Version=1.0.0.7, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\HelperMaster.NET.1.0.7\lib\net45\HelperMaster.NET.dll</HintPath>
     </Reference>
     <Reference Include="itextsharp, Version=5.5.13.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <HintPath>..\packages\iTextSharp.5.5.13\lib\itextsharp.dll</HintPath>
@@ -234,6 +237,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ControllerBaseController.cs" />
     <Compile Include="Controllers\InicioController.cs" />
+    <Compile Include="Controllers\ReporteriaController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -265,7 +269,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\ControllerBase\" />
+    <Folder Include="Views\Reporteria\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
